# adharva-web-server

./: .env.example  .gitignore  Cargo.toml  README.md  Rocket.toml  curr_state.json  events.json.backup  update.sh
.github/workflows/: ping_api.yml
.history/: Cargo_20250607000324.toml  Cargo_20250607000803.toml  Cargo_20250607001108.toml  Cargo_20250607115255.toml  Cargo_20250607120132.toml  Cargo_20250607120425.toml  Cargo_20250607122026.toml  Cargo_20250607122041.toml  Cargo_20250607122055.toml  Cargo_20250607122056.toml  Cargo_20250607122121.toml  event_20250607002317.json  event_20250607002324.json  event_20250607002442.json  event_20250607002527.json  events_20250607005539.json
.history/src/: main_20250607000900.rs  main_20250607000910.rs  main_20250607000940.rs  main_20250607001523.rs  main_20250607001527.rs  main_20250607001552.rs  main_20250607001741.rs  main_20250607001928.rs  main_20250607002711.rs  main_20250607002723.rs  main_20250607002746.rs  main_20250607002801.rs  main_20250607002805.rs  main_20250607002813.rs  main_20250607002837.rs  main_20250607002839.rs  main_20250607002945.rs  main_20250607003003.rs  main_20250607003039.rs  main_20250607003042.rs  main_20250607003203.rs  main_20250607003458.rs  main_20250607004120.rs  main_20250607004248.rs  main_20250607004417.rs  main_20250607004423.rs  main_20250607004521.rs  main_20250607004530.rs  main_20250607010000.rs  main_20250607010005.rs  main_20250607010047.rs  main_20250607010054.rs  main_20250607010151.rs  main_20250607010212.rs  main_20250607010320.rs  main_20250607010347.rs  (+36 more)
src/: main.rs
